--- a/test/index.html
+++ b/test/index.html
@@ -11,6 +11,6 @@
   <script src="mocha/mocha.js"></script>
   <script src="webgl-debug.js"></script>
   <script>mocha.setup('bdd');</script> 
-  <script src="./bundle.js"></script>
+  <script src="./index.js"></script>
 </body>
 </html>
