--- a/examples/index.html
+++ b/examples/index.html
@@ -18,6 +18,9 @@
       <li>
         <a href="2">Example 2</a>
       </li>
+      <li>
+        <a href="3">Example 3</a>
+      </li>
     </ul>
   </body>
 </html>
